# anaroot_idaten

./: anaroot.txt  bigrips_sort.txt
anaroot-4.6.1_idaten-source/example/Macros/SAMURAI/: RecoFDC.C
anaroot-4.6.1_idaten-source/scripts/: setup.sh
anaroot-4.6.1_idaten-source/sources/Core/: CMakeLists.txt  anacore_linkdef.hh
anaroot-4.6.1_idaten-source/sources/Core/include/: TArtDecoderWR.hh
anaroot/scripts/: setup.sh
anaroot/sources/: anaroot_linkdef.hh
anaroot/sources/Core/: CMakeLists.txt~
anaroot/sources/Core/include/: TArtCore.hh  TArtDecoderLUPO.hh  TArtDecoderWR.hh~
anaroot/sources/Core/src/: TArtDecoderFactory.cc  TArtDecoderWR.cc  (+1 more)
bigrips_sort/: CMakeLists.txt  afterproc_LJ.sh
bigrips_sort/db/: BigRIPSIC.xml  BigRIPSPPAC.xml  BigRIPSPPACnogate.xml  BigRIPSPlastic.xml  DALI.xml  FocalPlane.xml
bigrips_sort/db/PPAC/: BigRIPSPPAC_20240605_tmp.xml~  BigRIPSPPAC_20240618.xml
bigrips_sort/db/PPAC/BigRIPSDB/: BigRIPSPPAC_1718414806.xml
bigrips_sort/db/Plastic/: BigRIPSPlastic_20240604.xml
bigrips_sort/include/: BigRIPSTreeData.hpp
bigrips_sort/src/: CMakeLists.txt  MakeFullBigRIPSTree.cpp  MakePIDTree.cpp  Monitor.cpp
mbs_brs_merger/: .gitignore  Cuts.root  glob.h  hist_Eg_Eg.c  hist_Tdiff_0544_0146.c  hist_Tdiff_94Pd_0324_1092.c  hist_Tdiff_94Ru_0311_0146.c  hist_Tdiff_96Pd_0325_0106.c  hist_Tdiff_96Pd_0684_0325.c  hist_Tdiff_96Pd_1415_0684.c  hist_Tdiff_96Pd_1415_0684_pos.c  hist_aoq_zet.c  mbs_brs.c  ppac_time_checker.c  tree_pidcut.c
mbs_brs_merger/include/: BRSvme.C  BRSvme.h  MBS.C  MBS.h  MBS_BRSv.C  MBS_BRSv.h  gamma_flight_time.h
(+2 files in other folders)
